fix: fixed image covering

--- a/client/src/styles/sass/projects.scss
+++ b/client/src/styles/sass/projects.scss
@@ -56,7 +56,8 @@
         & .image{
             width:100%;
             background-image: url(https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png);
-            background-size: cover;
+            background-size: contain;
+            background-repeat: no-repeat;
             background-position: center;
             height:calc(200px);
         }
